# apiGen

./: .gitignore  SKILL.md  api-gen.skill  build.gradle.kts  readme.md  settings.gradle.kts
.trae/skills/api-gen/: SKILL.md
api_gen/: build.gradle.kts
api_gen/src/main/java/com/cdahmod/api_gen/: CleanSwaggerScript.kt  CreateBaseResponse.kt  Main.kt  SwaggerUpdater.kt
api_gen/src/main/resources/templates/: api.mustache
api_gen_py/: README.md  SKILL.md  install.sh  pyproject.toml
api_gen_py/api_gen_py/: __init__.py  __main__.py  cli.py  generator.py  swagger_updater.py
api_gen_py/api_gen_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
api_gen_py/scripts/: clean_swagger.py  cli.py  main.py  swagger_updater.py
gen_module/: build.gradle.kts
gen_module/src/main/java/com/cdahmad/gen_module/: MyClass.kt
gradle/: libs.versions.toml
myapplication/: build.gradle.kts
myapplication/src/main/: AndroidManifest.xml
myapplication/src/main/res/values/: themes.xml
myapplication/src/main/res/values-night/: themes.xml
